--- a/public/stat220/Day6.html
+++ b/public/stat220/Day6.html
@@ -43,9 +43,9 @@ class: title-slide, middle
 
 # .fancy[Data wrangling with **dplyr**]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- April 07 2023
+ January 14 2024
 
 ---
 
@@ -399,7 +399,7 @@ arrange(babynames, n)
  8  1880 F     Arthur        5 0.0000512
  9  1880 F     Birtha        5 0.0000512
 10  1880 F     Bulah         5 0.0000512
-# … with 1,924,655 more rows
+# ℹ 1,924,655 more rows
 ```
 
 ---
@@ -428,7 +428,7 @@ Changes ordering from largest to smallest.
  8  1958 M     Michael 90520 0.0420
  9  1948 M     James   88588 0.0497
 10  1954 M     Michael 88514 0.0428
-# … with 1,924,655 more rows
+# ℹ 1,924,655 more rows
 ```
 
 ---
@@ -456,7 +456,7 @@ babynames %&gt;%
  8  1990 F     Amanda      34408 0.0168
  9  1990 M     Daniel      33815 0.0157
 10  1990 M     David       33742 0.0157
-# … with 24,709 more rows
+# ℹ 24,709 more rows
 ```
 
 
@@ -473,14 +473,14 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bql.font90[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 6.Rmd file
 - Work on problems 1-3
 - Ask me questions
 ]
 ]
 
-<div class="countdown" id="timer_dfe869b7" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_88cc199b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -563,7 +563,7 @@ babynames %&gt;%
  8  1880 F     Alice      1414 0.0145
  9  1880 F     Bertha     1320 0.0135
 10  1880 F     Sarah      1288 0.0132
-# … with 1,924,655 more rows
+# ℹ 1,924,655 more rows
 ```
 
 ---
@@ -590,7 +590,7 @@ babynames %&gt;%
  8  1887 247394
  9  1888 299473
 10  1889 288946
-# … with 128 more rows
+# ℹ 128 more rows
 ```
 
 ---
@@ -647,10 +647,73 @@ babynames %&gt;%
  8  1887 M     John   8110 0.0742    7.42
  9  1888 M     John   9247 0.0712    7.12
 10  1889 M     John   8548 0.0718    7.18
-# … with 128 more rows
+# ℹ 128 more rows
 ```
 
 ---
+
+class: middle
+
+# Using `mutate()` with `lead` and `lag`
+
+
+```r
+babynames %&gt;%
+  filter(name == "Aaron", sex == "M") %&gt;%
+  arrange(year) %&gt;%
+  mutate(change_in_n = if_else(row_number() == 1, n, n - lag(n, 1, default = n[1])))
+# A tibble: 138 × 7
+# Groups:   year [138]
+    year sex   name      n     prop percent change_in_n
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt;    &lt;dbl&gt;   &lt;dbl&gt;       &lt;int&gt;
+ 1  1880 M     Aaron   102 0.000861  0.0861         102
+ 2  1881 M     Aaron    94 0.000868  0.0868          94
+ 3  1882 M     Aaron    85 0.000697  0.0697          85
+ 4  1883 M     Aaron   105 0.000934  0.0934         105
+ 5  1884 M     Aaron    97 0.000790  0.0790          97
+ 6  1885 M     Aaron    88 0.000759  0.0759          88
+ 7  1886 M     Aaron    86 0.000722  0.0722          86
+ 8  1887 M     Aaron    78 0.000714  0.0714          78
+ 9  1888 M     Aaron    90 0.000693  0.0693          90
+10  1889 M     Aaron    85 0.000714  0.0714          85
+# ℹ 128 more rows
+```
+
+
+---
+
+class: middle
+
+# Using `arrange()` with `row_number()`
+
+
+```r
+babynames %&gt;%
+  group_by(year) %&gt;%
+  arrange(year, desc(n)) %&gt;%
+  mutate(rank = row_number()) %&gt;%
+  top_n(-5, rank)
+# A tibble: 690 × 7
+# Groups:   year [138]
+    year sex   name        n   prop percent  rank
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;   &lt;int&gt;  &lt;dbl&gt;   &lt;dbl&gt; &lt;int&gt;
+ 1  1880 M     John     9655 0.0815    8.15     1
+ 2  1880 M     William  9532 0.0805    8.05     2
+ 3  1880 F     Mary     7065 0.0724    7.24     3
+ 4  1880 M     James    5927 0.0501    5.01     4
+ 5  1880 M     Charles  5348 0.0452    4.52     5
+ 6  1881 M     John     8769 0.0810    8.10     1
+ 7  1881 M     William  8524 0.0787    7.87     2
+ 8  1881 F     Mary     6919 0.0700    7.00     3
+ 9  1881 M     James    5441 0.0502    5.02     4
+10  1881 M     George   4664 0.0431    4.31     5
+# ℹ 680 more rows
+```
+
+
+---
+
+
 
 class: middle
 
@@ -736,6 +799,39 @@ gapminder %&gt;% slice_max(gdpPercap, n=6)
 
 ---
 
+
+class: middle
+
+# Using `pull()`
+
+&gt; `pull()` is used to extract a single column from a data frame as a vector.
+
+
+```r
+# Finding the most common name for each year
+most_common_name_each_year &lt;- babynames %&gt;%
+  group_by(year) %&gt;%
+  summarize(most_common_name = name[which.max(n)])
+```
+
+
+
+```r
+# Selecting 5 random years from the summarized data
+random_years &lt;- most_common_name_each_year %&gt;%
+  distinct(most_common_name) %&gt;% 
+  sample_n(size = 5)
+
+# Extracting names vector
+random_years %&gt;%
+  pull(most_common_name) 
+[1] "Mary"     "Emma"     "Jacob"    "Isabella" "Robert"  
+```
+
+
+---
+
+
 class: middle
 
 # *summarize()* vs. *mutate()*
@@ -785,7 +881,7 @@ gapminder %&gt;%
  8 Afghanistan Asia       1987    40.8 13867957      852.    77.0
  9 Afghanistan Asia       1992    41.7 16317921      649.    77.0
 10 Afghanistan Asia       1997    41.8 22227415      635.    77.0
-# … with 1,694 more rows
+# ℹ 1,694 more rows
 ```
 
 ---
@@ -846,13 +942,14 @@ class: action, middle
 ]
 .pull-right-60[
 &lt;br&gt;
+&lt;br&gt;
 .bql.font90[
 - Work on problems 4-6
 - Ask me questions
 ]
 ]
 
-<div class="countdown" id="timer_d394e639" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_8eff21cc" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
