--- a/static/stat120/Day6.html
+++ b/static/stat120/Day6.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 13 2024
+ January 15 2024
 
 ---
 
@@ -586,7 +586,7 @@ Go over some examples in [class helper page](https://stat120-winter24.netlify.ap
 ]
 ]
 
-<div class="countdown" id="timer_99a8c172" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0c891c66" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
