--- a/static/stat220/Day6.html
+++ b/static/stat220/Day6.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 14 2024
+ January 15 2024
 
 ---
 
@@ -480,7 +480,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_88cc199b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_c3104cdb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -825,7 +825,7 @@ random_years &lt;- most_common_name_each_year %&gt;%
 # Extracting names vector
 random_years %&gt;%
   pull(most_common_name) 
-[1] "Mary"     "Emma"     "Jacob"    "Isabella" "Robert"  
+[1] "Sophia" "Robert" "James"  "Jacob"  "John"  
 ```
 
 
@@ -949,7 +949,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_8eff21cc" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_43f7571d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
