--- a/public/stat220/Day8.html
+++ b/public/stat220/Day8.html
@@ -101,6 +101,7 @@ untidy_data &lt;- tibble(
 
 
 ```r
+library(tidyr)  # for tidying messy data
 library(lubridate)  # for date manipulations
 library(stringr) # for string manipulations
 untidy_data %&gt;% 
@@ -123,6 +124,16 @@ untidy_data %&gt;%
 9 Cara  2021-01-09    142
 ```
 ]
+
+---
+
+background-image: url("images/tidyr_cheatsheet.png")
+background-position: center
+background-size: 75%
+class: clear
+
+
+
 
 ---
 
@@ -428,23 +439,23 @@ BP_long
 
 ```r
 BP_long1 &lt;- BP_long %&gt;%
-* separate(visit, c("acrnym", "visit"))
+* separate(visit, c("type", "visit"))
 BP_long1
 # A tibble: 12 × 5
-   id    sex   acrnym visit   SBP
-   &lt;chr&gt; &lt;chr&gt; &lt;chr&gt;  &lt;chr&gt; &lt;dbl&gt;
- 1 a     F     SBP    v1      130
- 2 a     F     SBP    v2      110
- 3 a     F     SBP    v3      112
- 4 b     M     SBP    v1      120
- 5 b     M     SBP    v2      116
- 6 b     M     SBP    v3      122
- 7 c     M     SBP    v1      130
- 8 c     M     SBP    v2      136
- 9 c     M     SBP    v3      138
-10 d     F     SBP    v1      119
-11 d     F     SBP    v2      106
-12 d     F     SBP    v3      118
+   id    sex   type  visit   SBP
+   &lt;chr&gt; &lt;chr&gt; &lt;chr&gt; &lt;chr&gt; &lt;dbl&gt;
+ 1 a     F     SBP   v1      130
+ 2 a     F     SBP   v2      110
+ 3 a     F     SBP   v3      112
+ 4 b     M     SBP   v1      120
+ 5 b     M     SBP   v2      116
+ 6 b     M     SBP   v3      122
+ 7 c     M     SBP   v1      130
+ 8 c     M     SBP   v2      136
+ 9 c     M     SBP   v3      138
+10 d     F     SBP   v1      119
+11 d     F     SBP   v2      106
+12 d     F     SBP   v3      118
 ```
 
 ]
@@ -587,7 +598,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_c7a177c6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_00b2dd10" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -719,24 +730,24 @@ complex_dates %&gt;%
    &lt;td style="text-align:left;"&gt; 31-October-1952 14:30:15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 1952-10-31 14:30:15 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1952 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1952-10-31 14:30:15 UTC--2024-01-19 01:32:16 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 71.21550 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1952-10-31 14:30:15 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 71.21552 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Mo &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 12-Jan-1984 22:15:00 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 1984-01-12 22:15:00 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 1984 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1984-01-12 22:15:00 UTC--2024-01-19 01:32:16 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 40.01680 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1984-01-12 22:15:00 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 40.01683 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Dee &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 02-Feb-2002 10:45:30 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 2002-02-02 10:45:30 &lt;/td&gt;
    &lt;td style="text-align:right;"&gt; 2002 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2002-02-02 10:45:30 UTC--2024-01-19 01:32:16 UTC &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 21.95925 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2002-02-02 10:45:30 UTC--2024-01-19 01:45:07 UTC &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 21.95927 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -995,7 +1006,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_b2c10457" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_4115b010" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
